--- a/RAS_ASP.NET/RAS_ASP.NET.csproj
+++ b/RAS_ASP.NET/RAS_ASP.NET.csproj
@@ -16,7 +16,12 @@
 
   <ItemGroup>
     <PackageReference Include="FluentNHibernate" Version="3.1.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
     <PackageReference Include="MySql.Data" Version="8.0.25" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Views\Dish\" />
   </ItemGroup>
 
 </Project>
